--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,41 @@
     <string name="app_name">SettleInn</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="bedroom_numbers">
+        <item>N/A</item>
+        <item>Studio</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4+</item>
+    </string-array>
+    <string-array name="bathroom_numbers">
+        <item>N/A</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4+</item>
+    </string-array>
+    <string-array name="pool">
+        <item>N/A</item>
+        <item>Yes</item>
+        <item>No</item>
+    </string-array>
+    <string-array name="parking_spots">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="garage_options">
+        <item>Yes</item>
+        <item>No</item>
+        <item>N/A</item>
+    </string-array>
+    <string-array name="construction_options">
+        <item>Yes</item>
+        <item>No</item>
+        <item>N/A</item>
+    </string-array>
 </resources>
